--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser": "2.0.0-rc.5",
     "@angular/platform-browser-dynamic": "2.0.0-rc.5",
     "@angular/router": "3.0.0-rc.1",
+    "angularfire2": "^2.0.0-beta.4",
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.11",
+    "firebase": "^3.3.0",
+    "rxjs": "5.0.0-beta.6",
     "ts-helpers": "^1.1.1",
+    "typescript": "^2.0.0",
     "zone.js": "0.6.12"
   },
   "devDependencies": {
@@ -38,6 +41,6 @@
     "protractor": "4.0.3",
     "ts-node": "1.2.1",
     "tslint": "3.13.0",
-    "typescript": "^2.0.0"
+    "typescript": "^2.1.0-dev.20160830"
   }
 }
