--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -3,7 +3,10 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
@@ -12,6 +15,10 @@
     "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
+    ],
+    "types": [
+      "jasmine",
+      "firebase"
     ]
   }
 }
